<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="edu.uta.groceryplanner.HelpActivity">
    <TextView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        android:background="#fff"
        android:textColor="@color/black"
        android:text="@string/help1"/>
    <TextView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        android:background="#fff"
        android:textColor="@color/black"
        android:text="@string/help2"/>
    <TextView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        android:background="#fff"
        android:textColor="@color/black"
        android:text="@string/help3"/>
    <TextView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        android:background="#fff"
        android:textColor="@color/black"
        android:text="@string/help4"/>
    <TextView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        android:background="#fff"
        android:textColor="@color/black"
        android:text="@string/help5"/>
    <TextView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        android:background="#fff"
        android:textColor="@color/black"
        android:text="@string/help6"/>
    <TextView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        android:background="#fff"
        android:textColor="@color/black"
        android:text="@string/help7"/>
    <TextView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        android:background="#fff"
        android:textColor="@color/black"
        android:text="@string/help8"/>
    <TextView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        android:background="#fff"
        android:textColor="@color/black"
        android:text="@string/help9"/>
    <TextView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        android:background="#fff"
        android:textColor="@color/black"
        android:text="@string/help10"/>
</LinearLayout>
</ScrollView>