<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.uta.groceryplanner.RegisterActivity">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:background="@drawable/edittextbackground"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        android:padding="8dp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:background="@drawable/edittextbackground"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        android:padding="8dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/prompt_password"
        android:ems="10"
        android:background="@drawable/edittextbackground"
        android:inputType="textPassword"
        android:padding="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_confirm_password"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edittextbackground"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />


    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/register"
        android:textColor="#fff"
        android:background="@color/colorTitle2"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignin"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <ProgressBar
        android:id="@+id/progressBarRegister"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:progress="@android:integer/config_shortAnimTime"
        android:visibility="invisible"
        android:layout_weight="1"
        android:indeterminate="true"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/textViewSignin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textAlignment="center"
        android:layout_weight="1"
        android:text="@string/already_registered_signin_here"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />


</android.support.constraint.ConstraintLayout>
